--- a/crudmember/templates/crudmember/home.html
+++ b/crudmember/templates/crudmember/home.html
@@ -17,11 +17,11 @@
 <div class="search-Container">
 
   <div class="controllArea">
-    <form method="get" action="" class="search-Form">
+    <div class="search-Form">
       <label for="" class="search-Form_label">일반배차 노선</label>
       <input autocomplete="off" type="text" class="search-Form_input">
-      <input type="submit" class="search-Form_search-btn" value="검색">
-    </form>
+      <div class="search-Form_search-btn">검색</div>
+    </div>
 
     <div class="dayController">
       <div class="todayBtn">오늘</div>
@@ -68,7 +68,7 @@
     </div>
     <div class="alarmArea">
       <div class="alarm">정기점검</div>
-      <div class="vhicleCheck"><!-- alarmAble -->
+      <div class="vhicleCheck {% if vehicle_list %}inspectionAlarm{% endif %}"><!-- inspectionAlarm -->
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
           <path id="Icon_awesome-bus" data-name="Icon awesome-bus"
             d="M19.063,5H18.75V3.125C18.75,1.375,14.875,0,10,0S1.25,1.375,1.25,3.125V5H.938A.937.937,0,0,0,0,5.938V9.063A.938.938,0,0,0,.938,10H1.25v6.25A1.25,1.25,0,0,0,2.5,17.5v1.25A1.25,1.25,0,0,0,3.75,20H5a1.25,1.25,0,0,0,1.25-1.25V17.5h7.5v1.25A1.25,1.25,0,0,0,15,20h1.25a1.25,1.25,0,0,0,1.25-1.25V17.5h.25a.986.986,0,0,0,1-1V10h.313A.938.938,0,0,0,20,9.063V5.938A.937.937,0,0,0,19.063,5ZM4.375,15.625a1.25,1.25,0,1,1,1.25-1.25A1.25,1.25,0,0,1,4.375,15.625ZM5,11.25A1.25,1.25,0,0,1,3.75,10V5A1.25,1.25,0,0,1,5,3.75H15A1.25,1.25,0,0,1,16.25,5v5A1.25,1.25,0,0,1,15,11.25Zm10.625,4.375a1.25,1.25,0,1,1,1.25-1.25A1.25,1.25,0,0,1,15.625,15.625Z"
@@ -345,35 +345,15 @@
         </div>
       </div>
       <div class="dataCell dataCellCalender">
-        <div class="calnderItem">첫번째일정글자수가넘으면</div>
-        <div class="calnderItem">첫번째 일정 내용이 길때</div>
-        <div class="calnderItem">new notice</div>
-        <div class="moreCalender">+1</div>
       </div>
     </div>
   </div>
   <div class="orderContentesArea">
     <div class="orderListBox">
-      <div class="orderListCell">
-        <span>와우초등학교</span>
-        <span>3</span>
-      </div>
-      <div class="orderListCell">
-        <span>와우초</span>
-        <span>3</span>
-      </div>
-      <div class="orderListCell">
-        <span>와우초</span>
-        <span>3</span>
-      </div>
-      <div class="orderListCell">
-        <span>와우초</span>
-        <span>3</span>
-      </div>
     </div>
     <div class="totalBox">
       <span>총 건수</span>
-      <span>40</span>
+      <span></span>
     </div>
   </div>
 </div>
@@ -386,7 +366,7 @@
 {% block popup %}
 <div class="popupAreaModules">
   <div class="popupBgModules"></div>
-  <form method="post" action="{% url dispatch:calendar_create %}" class="popupContainer checkForm">
+  <form method="post" action="{% url 'dispatch:calendar_create' %}" class="popupContainer checkForm">
       {% csrf_token %}
       <div class="popupHeader">
         <div class="popupTitle">배차확인</div>
@@ -405,8 +385,8 @@
             </div>
           </div>
           <div class="popupFooter">
-              <div class="btnModules addChecker">등록</div>
-              <div class="btnModules checkerCloseBtn">닫기</div>
+            <input type="submit" class="btnModules addChecker" value="등록">
+            <div class="btnModules checkerCloseBtn">닫기</div>
           </div>
           <input type="hidden" name="date" class="checkDateData">
       </div>
@@ -465,18 +445,14 @@
             <div class="scrolling_table-list_body">
               <table class="table-list">
                 <tbody>
-                  <tr class="table-list_body-tr">
-                    <td class="table-list_body-tr_td">1</td>
-                    <td class="table-list_body-tr_td">경기70바 7163</td>
-                    <td class="table-list_body-tr_td">2016-04-21</td>
-                    <td class="table-list_body-tr_td">2023-04-20</td>
+                  {% for vehicle in vehicle_list %}
+                  <tr class="table-list_body-tr" onclick="locationVehicle(this)">
+                    <td class="table-list_body-tr_td">{{forloop.counter}}</td>
+                    <td class="table-list_body-tr_td">{{vehicle.vehicle_num0}} {{vehicle.vehicle_num}}</td>
+                    <td class="table-list_body-tr_td">{{vehicle.release_date}}</td>
+                    <td class="table-list_body-tr_td">{{vehicle.check_date}}</td>
                   </tr>
-                  <tr class="table-list_body-tr">
-                    <td class="table-list_body-tr_td">1</td>
-                    <td class="table-list_body-tr_td">경기70바 7163</td>
-                    <td class="table-list_body-tr_td">2016-04-21</td>
-                    <td class="table-list_body-tr_td">2023-04-20</td>
-                  </tr>
+                  {% endfor %}
                 </tbody>
               </table>
             </div>
@@ -490,7 +466,7 @@
 
 <div class="popupAreaModules">
   <div class="popupBgModules"></div>
-  <form method="post" action="" class="popupContainer scheduleListForm">
+  <form method="post" action="{% url 'dispatch:schedule_delete' %}" class="popupContainer scheduleListForm">
       {% csrf_token %}
       <div class="popupHeader">
           <div class="popupTitle">일정</div>
@@ -501,6 +477,9 @@
               <table class="table-list">
                 <thead>
                   <tr class="table-list_head-tr">
+                    <td class="table-list_head-tr_td">
+                      <input type="checkbox">
+                    </td>
                     <td class="table-list_head-tr_td">순번</td>
                     <td class="table-list_head-tr_td">내용</td>
                     <td class="table-list_head-tr_td">작성자</td>
@@ -512,23 +491,12 @@
             <div class="scrolling_table-list_body">
               <table class="table-list">
                 <tbody>
-                  <tr class="table-list_body-tr">
-                    <td class="table-list_body-tr_td">1</td>
-                    <td class="table-list_body-tr_td">경기70바 7163</td>
-                    <td class="table-list_body-tr_td">이도울A</td>
-                    <td class="table-list_body-tr_td">2023-04-20</td>
-                  </tr>
-                  <tr class="table-list_body-tr">
-                    <td class="table-list_body-tr_td">1</td>
-                    <td class="table-list_body-tr_td">경기70바 7163</td>
-                    <td class="table-list_body-tr_td">이도울A</td>
-                    <td class="table-list_body-tr_td">2023-04-20</td>
-                  </tr>
                 </tbody>
               </table>
             </div>
           </div>
           <div class="popupFooter">
+            <input type="submit" class="btnModules scheduleListDeleteBtn" value="삭제">
               <div class="btnModules scheduleListCloseBtn">닫기</div>
           </div>
       </div>
@@ -552,18 +520,22 @@
 
 
   {% autoescape off %}
-  const name1 = {{ check_id }}
+
   const scheduleList = {{ schedule_list }}
+  const checkList = {{ check_list }}
+  const changeOrderList = {{ change_order_list }}
   {% endautoescape %}
-  console.log("name1", name1)
+
   console.log("scheduleList", scheduleList)
+  console.log("checkList", checkList)
+  console.log("changeOrderList", changeOrderList)
 
 
   let targetLink = ""
 
   function openLinePrint(url) {
     if(thisDateData !== ""){
-    targetLink = `${url}?date=${thisDateData}`
+    targetLink = `dispatch/print/line?date=${thisDateData}`
     window.open(targetLink, "노선별A4", "width=800, height=640")
     }else{
       alert("날짜를 선택해 주세요.")
@@ -571,7 +543,7 @@
   }
   function openBusPrintA4(url) {
     if(thisDateData !== ""){
-    targetLink = `${url}?date=${thisDateData}&size=A4`
+    targetLink = `dispatch/print/bus?date=${thisDateData}&size=A4`
     window.open(targetLink, "호수별A4", "width=1170, height=640")
     }else{
       alert("날짜를 선택해 주세요.")
@@ -579,7 +551,7 @@
   }
   function openBusPrintA3(url) {
     if(thisDateData !== ""){
-    targetLink = `${url}?date=${thisDateData}&size=A3`
+    targetLink = `dispatch/print/bus?date=${thisDateData}&size=A3`
     window.open(targetLink, "호수별A3", "width=1660, height=640")
     }else{
       alert("날짜를 선택해 주세요.")
@@ -587,11 +559,15 @@
   }
   function openDrivingListPrint(url) {
     if(thisDateData !== ""){
-    targetLink = `${url}?date=${thisDateData}`
+    targetLink = `dispatch/print/dailylist?date=${thisDateData}`
     window.open(targetLink, "운행일보A4", "width=1200, height=640")
     }else{
       alert("날짜를 선택해 주세요.")
     }
+  }
+
+  function locationVehicle(vehicleId){
+    location.href = `vehicle/list?search=${vehicleId.children[1].innerText.split(" ")[1]}&select=vehicle`
   }
 
 </script>
@@ -602,4 +578,6 @@
 <script src="{% static 'js/crudmember/inspection.js' %}"></script>
 <script src="{% static 'js/crudmember/scheduleList.js' %}"></script>
 <script src="{% static 'js/crudmember/calnderLength.js' %}"></script>
+<script src="{% static 'js/crudmember/orderList.js' %}"></script>
+<script src="{% static 'js/crudmember/orderListfilter.js' %}"></script>
 {% endblock %}
