--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -9,8 +9,9 @@
     align-items: center;
 }
 
-.controllArea form {
+.search-Form {
     display: none;
+    margin-right: 2rem;
 }
 
 .search-Container form {
@@ -388,20 +389,13 @@
     background-color: #CDCDCE;
 }
 
-.needCheck {
-    padding: 0.2rem 0.6rem;
-    background-color: #59C8AA;
-    color: white;
-    border-radius: 0.3rem;
-}
-
 .dataTitleBox svg {
     margin-right: 1rem;
 }
 
 .checkMark {
     position: absolute;
-    top: -4.6rem;
+    top: -4.1rem;
     right: 0.2rem;
     cursor: pointer;
 }
@@ -470,7 +464,7 @@
 
 
 /* 정기점검 팝업 */
-.alarmAble {
+.inspectionAlarm {
     background-color: #444;
 }
 
@@ -514,27 +508,36 @@
     background-color: #444;
 }
 
+.scheduleListDeleteBtn{
+    background-color: #444;
+    margin-right: 1rem;
+}
+
 .scheduleListForm .scrolling_table-list_body {
     height: 14.4rem;
 }
 
 .scheduleListForm td:nth-child(1) {
-    width: 7%;
+    width: 4%;
 }
 
 .scheduleListForm td:nth-child(2){
-    width: 69%;
+    width: 7%;
 }
 
 .scheduleListForm td:nth-child(3){
-    width: 10%;
+    width: 65%;
 }
 
 .scheduleListForm td:nth-child(4) {
+    width: 10%;
+}
+
+.scheduleListForm td:nth-child(5) {
     width: 18%;
 }
 
-.scheduleListForm .scrolling_table-list_body td:nth-child(2){
+.scheduleListForm .scrolling_table-list_body td:nth-child(3){
     text-align: left;
     padding-left: 1rem;
 }
