--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: calc(100% - 16rem);
+  height: calc(100% - 19.6rem);
   box-sizing: border-box;
   background-color: white;
   border-radius: 0.2rem;
@@ -49,6 +49,23 @@
 .groupListTitle {
   font-size: 1.4rem;
   color: white;
+}
+
+.groupLock{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.4rem;
+  height: 2.2rem;
+  margin: 0 1rem 0 auto;
+  border-radius: 0.2rem;
+  font-size: 1.4rem;
+  background-color: white;
+  cursor: pointer;
+}
+
+.lockOpen{
+  display: none;
 }
 
 .groupListHead svg {
@@ -94,7 +111,7 @@
   justify-content: center;
   align-items: center;
   width: 3.6rem;
-  height: 100%;
+  height: 3.6rem;
   font-size: 1.4rem;
   font-weight: 700;
   box-sizing: border-box;
@@ -106,7 +123,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  width: calc(100% - 7.2rem);
+  width: calc(100% - 3.6rem);
   height: 100%;
   padding-left: 1rem;
   box-sizing: border-box;
@@ -145,7 +162,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 14rem;
+  height: 17.6rem;
   box-sizing: border-box;
   background-color: white;
   border-radius: 0.2rem;
@@ -183,7 +200,7 @@
   height: 2.8rem;
 }
 
-.groupCreateinputinput {
+.groupCreateinput input {
   height: 100%;
   padding-left: 0.6rem;
   border: 0.1rem solid #CDCDCE;
@@ -195,6 +212,48 @@
 .groupNameCreate {
   width: 100%;
 }
+
+.groupCalculateinput{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 2.8rem;
+  font-size: 1.4rem;
+}
+
+.groupCalculateinput span:nth-child(1){
+  margin-right: 2rem;
+}
+
+.tilde{
+  margin: 0 0.4rem;
+}
+
+.groupCalculateinput input{
+  width: 3rem;
+  height: 100%;
+  border: 0.1rem solid #CDCDCE;
+  border-radius: 0.2rem;
+  padding-left: 0.6rem;
+  outline: none;
+  box-sizing: border-box;
+}
+.groupCalculateinput div{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 5rem;
+  height: 100%;
+  padding-left: 1rem;
+  border: 0.1rem solid #CDCDCE;
+  border-radius: 0.2rem;
+  outline: none;
+  box-sizing: border-box;
+  font-size: 1.4rem;
+  background-color: #D2D2D2;
+}
+
 
 .groupCreateBtnBox {
   display: flex;
