--- a/static/css/accounting/deposit.css
+++ b/static/css/accounting/deposit.css
@@ -1,6 +1,6 @@
 .searchAreaBox {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 4rem;
@@ -11,6 +11,13 @@
     box-shadow: 0.1rem 0.1rem 0.6rem rgb(0 0 0 / 30%);
 }
 
+.searchForm {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+}
+
 .searchTool input[type=text],
 .searchTool input[type=date],
 .searchTool input[type=number] {
@@ -18,7 +25,7 @@
     margin-right: 1rem;
 }
 
-.searchType{
+.searchType {
     width: 10rem;
     height: 2.5rem;
     padding-left: 1rem;
@@ -32,7 +39,7 @@
     margin: 0 1rem;
 }
 
-.pymentType{
+.pymentType {
     width: 8rem;
     height: 2.5rem;
     padding-left: 1rem;
@@ -65,6 +72,22 @@
     background-color: #444;
 }
 
+.depositBtnBox {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+}
+
+.depositRegistrationBtn {
+    background-color: #0069D9;
+    margin-right: 1rem;
+}
+
+.depositLoadBtn {
+    background-color: #444;
+}
+
 
 
 
@@ -73,14 +96,22 @@
 
 
 .depositForm {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100% - 3.6rem);
+    height: calc(100% - 12rem);
     box-sizing: border-box;
     background-color: white;
     border-radius: 0.2rem;
     box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.depositDeleteBtn {
+    position: absolute;
+    top: -5.2rem;
+    right: 16.8rem;
+    background-color: #444;
 }
 
 .depositContainer {
@@ -91,7 +122,7 @@
 
 .depositHead {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     width: 100%;
     height: 3.6rem;
@@ -100,24 +131,13 @@
     font-size: 1.4rem;
 }
 
-.selectDate {
-    font-weight: 700;
+.depositHead input {
+    margin-left: 1rem;
 }
 
-.visibelOption label {
+.depositHead input,
+.depositHead label {
     cursor: pointer;
-}
-
-.visibelOption label:nth-child(2) {
-    margin-right: 1rem;
-}
-
-.depositBtn {
-    position: absolute;
-    right: 0;
-    width: 10.6rem;
-    background-color: #0069D9;
-    transform: translate(-50%, 0);
 }
 
 
@@ -142,23 +162,35 @@
     font-size: 1.4rem;
 }
 
-.depositBody td:nth-child(1),
-.depositBody td:nth-child(2){
+.depositBody td:nth-child(1) {
+    width: 4%;
+}
+
+.depositBody td:nth-child(2) {
     width: 10%;
 }
 
-.depositBody td:nth-child(3),
-.depositBody td:nth-child(5){
+.depositBody td:nth-child(3) {
+    width: 14%;
+}
+
+.depositBody td:nth-child(4) {
     width: 16%;
 }
 
-.depositBody td:nth-child(4),
-.depositBody td:nth-child(6),
+.depositBody td:nth-child(6) {
+    width: 12%;
+}
+
+.depositBody td:nth-child(5) {
+    width: 8%;
+}
+
 .depositBody td:nth-child(7),
 .depositBody td:nth-child(8),
 .depositBody td:nth-child(9),
-.depositBody td:nth-child(10){
-    width: 8%;
+.depositBody td:nth-child(10) {
+    width: 9%;
 }
 
 
@@ -166,7 +198,7 @@
 
 .depositScrollBox {
     width: 100%;
-    height: 64rem;
+    height: 62rem;
     overflow-y: scroll;
 }
 
@@ -222,6 +254,10 @@
     cursor: pointer;
 }
 
+.depositCell:hover {
+    background-color: #CDCDCE;
+}
+
 .depositCell td {
     text-align: center;
 }
@@ -234,7 +270,7 @@
     box-sizing: border-box;
 }
 
-.depositCell td:nth-child(9){
+.depositCell td:nth-child(9) {
     color: #0069D9;
 }
 
@@ -242,13 +278,28 @@
     color: red;
 }
 
-.depositProcessedCell {
-    background-color: #EFEFEF;
-}
-
 .dayTotal {
     height: 3.6rem;
     background-color: #CDCDCE;
+}
+
+.dayTotal td:nth-child(1) {
+    width: 64%;
+    padding-left: 2.4rem;
+    text-align: left;
+    border-right: 0.1rem solid white;
+}
+
+.dayTotal td:nth-child(2),
+.dayTotal td:nth-child(3),
+.dayTotal td:nth-child(4),
+.dayTotal td:nth-child(5) {
+    width: 9%;
+    border-right: 0.1rem solid white;
+}
+
+.dayTotal td:nth-child(6) {
+    border: none;
 }
 
 .dayTotal td {
@@ -256,15 +307,6 @@
     text-align: right;
     padding-right: 1rem;
     box-sizing: border-box;
-}
-
-.dayTotal td:nth-child(1),
-.dayTotal td:nth-child(2),
-.dayTotal td:nth-child(3),
-.dayTotal td:nth-child(4),
-.dayTotal td:nth-child(6),
-.dayTotal td:nth-child(5){
-    border-right: none;
 }
 
 .selectTotal {
@@ -284,21 +326,91 @@
     display: none;
 }
 
-.selecting td:nth-child(7),
-.selecting td:nth-child(8) {
-    background-color: #0069D9;
-    color: white;
-}
-
-.popupCloseBtn{
+.popupCloseBtn {
     background-color: #444;
 }
 
-.amountProcessedPopupArticleBox{
+.amountProcessedPopupArticleBox {
     display: flex;
     flex-direction: column;
 }
 
-.amountProcessedCloseBtn{
+.amountProcessedCloseBtn {
     background-color: #444;
+}
+
+.checkTotalContainer {
+    width: 100%;
+    height: 4rem;
+    margin-top: 2rem;
+    box-sizing: border-box;
+    background-color: white;
+    border-radius: 0.2rem;
+    box-shadow: 0.1rem 0.1rem 0.6rem rgba(0, 0, 0, 0.3);
+}
+
+.checkTotalTable {
+    width: calc(100% - 0.6rem);
+    height: 100%;
+}
+
+.checkTotalTable td {
+    font-size: 1.4rem;
+    text-align: right;
+    padding-right: 1rem;
+    box-sizing: border-box;
+    border-right: 0.1rem solid #CDCDCE;
+}
+
+.checkTotalTable td:nth-last-child(1) {
+    border-right: none;
+}
+
+.checkTotalTable td:nth-child(1) {
+    width: 64%;
+    padding-left: 2.4rem;
+    text-align: left;
+}
+
+.checkTotalTable td:nth-child(2),
+.checkTotalTable td:nth-child(3),
+.checkTotalTable td:nth-child(4),
+.checkTotalTable td:nth-child(5) {
+    width: 9%;
+}
+
+.btnModulesCreate{
+    background-color: #0069D9;
+    margin-right: 1rem;
+}
+
+
+.loadingBg{
+    position: absolute;
+    z-index: 11000;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.loadingBox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loadingBox img{
+    width: 12rem;
+}
+
+.loadingBox span{
+    font-size: 1.4rem;
+}
+
+.stateDelete{
+    display: none;
 }
